src/QDialogButtonBox.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQDialogButtonBoxCtor_1(void * parent);
EXTERNC void * SCWQDialogButtonBoxCtor_1(void * parent);
EXTERNC void * QWQDialogButtonBoxCtor_2(int  orientation, void * parent);
EXTERNC void * SCWQDialogButtonBoxCtor_2(int  orientation, void * parent);
EXTERNC void * QWQDialogButtonBoxCtor_3(int  buttons, void * parent);
EXTERNC void * SCWQDialogButtonBoxCtor_3(int  buttons, void * parent);
EXTERNC void * QWQDialogButtonBoxCtor_4(int  buttons, int  orientation, void * parent);
EXTERNC void * SCWQDialogButtonBoxCtor_4(int  buttons, int  orientation, void * parent);
EXTERNC void QWQDialogButtonBoxsetOrientation(void * obj, int  orientation);
EXTERNC int QWQDialogButtonBoxorientation(void * obj);
EXTERNC void QWQDialogButtonBoxaddButton_1(void * obj, void * button, int  role);
EXTERNC void * QWQDialogButtonBoxaddButton_2(void * obj, char * text, int  role);
EXTERNC void * QWQDialogButtonBoxaddButton_3(void * obj, int  button);
EXTERNC void QWQDialogButtonBoxremoveButton(void * obj, void * button);
EXTERNC void QWQDialogButtonBoxclear(void * obj);
EXTERNC int QWQDialogButtonBoxbuttonRole(void * obj, void * button);
EXTERNC void QWQDialogButtonBoxsetStandardButtons(void * obj, int  buttons);
EXTERNC int QWQDialogButtonBoxstandardButton(void * obj, void * button);
EXTERNC void * QWQDialogButtonBoxbutton(void * obj, int  which);
EXTERNC void QWQDialogButtonBoxsetCenterButtons(void * obj, int8_t  center);
EXTERNC int8_t QWQDialogButtonBoxcenterButtons(void * obj);
EXTERNC void QWvalidateCB_QDialogButtonBox(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQDialogButtonBoxDtor(void *);
EXTERNC void SCWQDialogButtonBoxDtor(void *);